--- a/index.html
+++ b/index.html
@@ -9,6 +9,38 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+<header>
+    <div class="head">
+        <div class="form-contact">
+            <h1>Contact book</h1>
+            <div class="contact-name fild">
+                <label for="inpname">Contact name</label>
+                <input type="text" name="inpname" id="inpname">
+            </div>
+            <div class="contact fild">
+                <label for="inpcontact">Contact number</label>
+                <input type="number" name="inpcontact" id="inpcontact">
+            </div>
+            <div class="sub">
+                <input type="button" value="Save" class="button">
+            </div>
+        </div>
+    </div>
+</header>
+
+<main>
+    <div class="container">
+        <div class="contacts">
+            <ul class="contacts-list">
+                <li>
+                    <span class="name"></span>
+                    <span class="number"></span>
+                </li>
+            </ul>
+        </div>
+    </div>
+</main>
+
 
 <script src="./script.js"></script>
 </body>
