--- a/index.html
+++ b/index.html
@@ -37,6 +37,18 @@
     </div>
 </main>
 
+<div class="add noadd">
+    Успішне додавання нового запису
+</div>
+
+<div class="error noerror">
+    Будьляска заповніть всі поля
+</div>
+
+<div class="dublic nodublic">
+    Такий контакт вже є
+</div>
+
 
 <script src="./script.js"></script>
 </body>
